--- a/res/xml/options.xml
+++ b/res/xml/options.xml
@@ -50,8 +50,11 @@
             android:key="showfirstapproachcircle" android:defaultValue="false"/>
         <CheckBoxPreference android:key="hideReplayMarquee" android:title="@string/opt_hide_replay_marquee_title"
             android:summary="@string/opt_hide_replay_marquee_summary" android:defaultValue="false"/>
-        <CheckBoxPreference android:key="hideInGameUI" android:title="@string/opt_hide_ingame_ui_title"
-            android:summary="@string/opt_hide_ingame_ui_summary" android:defaultValue="false"/>
+        <ListPreference android:entries="@array/opt_hide_ingame_ui_names" android:entryValues="@array/opt_hide_ingame_ui_values"
+            android:key="hideGameplayUI" android:title="@string/opt_hide_ingame_ui_title" android:summary="@string/opt_hide_ingame_ui_summary"
+            android:defaultValue="0"/>
+        <!-- <CheckBoxPreference android:key="hideInGameUI" android:title="@string/opt_hide_ingame_ui_title"
+            android:summary="@string/opt_hide_ingame_ui_summary" android:defaultValue="false"/> -->
         <CheckBoxPreference android:summary="@string/opt_skin_summary" android:title="@string/opt_skin_title"
             android:key="skin" android:defaultValue="false"/>
         <CheckBoxPreference android:summary="@string/opt_combo_burst_summary" android:title="@string/opt_combo_burst_title"
