--- a/res/values/options.xml
+++ b/res/values/options.xml
@@ -73,7 +73,7 @@
 
     <string-array name="placeholder_array">
         <item>placeholder</item>
-    </string>
+    </string-array>
 
     <string-array name="set_playfield_names">
         <item>100%</item>
